updated css to prevent dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #0c1321;
   --foreground: #171717;
 }
 
@@ -52,13 +52,6 @@
   /* Outline */
   --color-outline: #909096;
   --color-outline-variant: #45474c;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
